horizontal scroll bar issue fixed

--- a/tech-genie-dev/src/App.css
+++ b/tech-genie-dev/src/App.css
@@ -2,6 +2,14 @@
     background-color: black;
 }
 
+.row{
+    margin-right: 0px;
+}
+
+.cardDesign {
+    overflow-x: hidden;  /* or overflow: hidden; */
+  }
+
 .container-fluid{
     padding: 0px;
 }
@@ -11,9 +19,4 @@
     padding: 0px 0px 0px 10px;
     background: rgba(255, 255, 255, 0.1);
     box-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
-}
-
-/* Optional: Adjust card width and margins */
-.col {
-    margin-bottom: 15px; /* Adjust margin between cards */
 }
