--- a/tech-genie-dev/src/css/cardDesign.css
+++ b/tech-genie-dev/src/css/cardDesign.css
@@ -9,7 +9,7 @@
     font-family: roboto;
     text-align: justify;
     cursor: pointer;
-    margin:30px;
+    margin:16px;
     transform-style: preserve-3d;
     transform: perspective(1000px);
 }
